Update project branding from "Aureanne Review Tracker" to "Boresha". Modify package.json, index.html, and various components to reflect the new name. Enhance SEO metadata across pages for improved visibility. Update footer and header components to align with the new branding.

--- a/reviews/public/manifest.json
+++ b/reviews/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Aureanne",
-  "name": "Aureanne Review Tracker",
+  "short_name": "Boresha",
+  "name": "Boresha",
   "icons": [
     {
       "src": "favicon.ico",
