Enhance platform connection handling for Yelp integration
- Implemented special handling for Yelp in PlatformConnectionDialog to fetch businesses using the Yelp API.
- Updated platform registry to include Yelp as an active platform with lazy initialization of the YelpProvider.
- Removed deprecated platforms (Trustpilot and TripAdvisor) from seed data to streamline platform management.

This update improves the integration with Yelp and ensures a more robust platform connection experience.

--- a/reviews/.env
+++ b/reviews/.env
@@ -4,3 +4,4 @@ REACT_APP_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXB
 REACT_APP_FACEBOOK_APP_ID=1313614689848657
 REACT_APP_GOOGLE_CLIENT_ID=797993281283-gtmsam9n5a692n8vtfaatbt9bfl923jc.apps.googleusercontent.com
 REACT_APP_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+REACT_APP_YELP_CLIENT_ID=m8TWUiEZ8PixSGDmn-Eoug
