Add Google Maps API integration and update dependencies for location features
- Added Google Maps API script to index.html for enhanced location functionality.
- Introduced @types/google.maps as a development dependency for TypeScript support.
- Refactored AddLocation component to implement Google Places Autocomplete, improving address input experience.
- Updated UserContext to remove unnecessary useSupabase hook, streamlining user session management.
- Enhanced CompanyPage to include location component with refreshed reviews data.

This update significantly improves location handling and user experience in the application.

--- a/reviews/package.json
+++ b/reviews/package.json
@@ -54,5 +54,8 @@
     "react-helmet-async": {
       "react": "$react"
     }
+  },
+  "devDependencies": {
+    "@types/google.maps": "^3.58.1"
   }
 }
