--- a/reviews/package.json
+++ b/reviews/package.json
@@ -18,7 +18,9 @@
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "ajv": "^8.17.1",
+    "apexcharts": "^5.3.5",
     "react": "^19.2.0",
+    "react-apexcharts": "^1.8.0",
     "react-dom": "^19.2.0",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.30.1",
