--- a/reviews/package.json
+++ b/reviews/package.json
@@ -19,10 +19,13 @@
     "@types/react-dom": "^19.2.0",
     "ajv": "^8.17.1",
     "apexcharts": "^5.3.5",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.2.0",
     "react-apexcharts": "^1.8.0",
     "react-dom": "^19.2.0",
     "react-helmet-async": "^2.0.5",
+    "react-i18next": "^16.2.1",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
