Add sync-templates script to package.json
- Introduced a new script, `sync-templates`, to facilitate the synchronization of email templates.
- This addition enhances the build process by allowing for easier management of email template updates.

This update improves the development workflow by streamlining template synchronization, ensuring that email communications remain up-to-date and consistent.

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -5,7 +5,8 @@
   "main": "fetch-platform-logos.js",
   "type": "commonjs",
   "scripts": {
-    "fetch-logos": "node fetch-platform-logos.js"
+    "fetch-logos": "node fetch-platform-logos.js",
+    "sync-templates": "node sync-email-templates.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.58.0",
@@ -14,4 +15,3 @@
     "dotenv": "^16.0.0"
   }
 }
-
